creacion-subida-index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,57 @@
 
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <menu>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Linkedin</a></li>
+      </menu>
+    </main>
+    <article>
+      <section id="perfil">
+        <img src="/img/foto.jpg" alt="foto perfil" />
+        <h1>Ana<br />López</h1>
+        <h2>hola@analopez.com</h2>
+      </section>
+      <section id="descripcion">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing eli t. Ut massa
+          nunc, viverra nec dapibus a, pulvinar vitae ligula. Fusce ornare enim
+          efficitur lorem tincidunt, in volutpat nibh ali quet. Sed scelerisque
+          ligula auctor lacus tincidunt, vel moll is odio malesuada. Phasell us
+          eget eli t quis lectus tempus ali quam in quis justo. Proin eu
+          ullamcorper dui. Morbi interdum, nisi vel porttitor molestie, erat
+          massa feugiat nunc, id bibendum ipsum risus in orci. Mauris in purus
+          posuere, pretium est ali quam, efficitur turpis.
+        </p>
+        <p>
+          Nullam ultricies, libero sed placerat dictum, velit nisi accumsan
+          ligula, quis solli citudin risus ligula ut metus. Nam rhoncus aliquam
+          orci, nec feugiat dolor vulputate a. Vivamus porttitor urna eu nibh
+          tincidunt sociales. Nullam et lacus nec nunc porta auctor. Maecenas a
+          sociales dolor. Sed pharetra lacus sem, quis accumsan diam consectetur
+          in. Aenean ornare urna ut cursus pharetra. Null am quis nunc quam.
+        </p>
+        <button>
+          <a href="">Más info</a>
+        </button>
+      </section>
+      <section id="experiencia">
+        <h2>Experiencia</h2>
+        <ul>
+          <li>
+            Fusce ornare enim efficitur lorem tincidunt, in volutpat nibh
+            aliquet.
+          </li>
+          <li>
+            Nullam ultricies, libero sed placerat dictum, velit nisi accumsan
+            ligula, quis soll icitudin risus ligula ut metus
+          </li>
+          <li>Aenean ornare urna ut cursus pharetra. Nullam quis nunc quam.</li>
+          <li>Vivamus porttitor urna eu nibh tincidunt sociales</li>
+        </ul>
+      </section>
+    </article>
+  </body>
 </html>
