--- a/sobremi.html
+++ b/sobremi.html
@@ -6,7 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre mí</title>
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <menu>
+        <li>
+          <a href="https://www.twitter.com" target="_blank">Twitter</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com" target="_blank">Linkedin</a>
+        </li>
+      </menu>
+    </header>
+    <main>
+      <section class="izq">
+        <p>Sobre</p>
+        <p>mí</p>
+        <a href="index.html">Volver</a>
+      </section>
+      <section class="der">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime iure
+          facere aspernatur dolorum nostrum saepe, minima sequi cupiditate
+          voluptates magnam suscipit? Deleniti, nostrum perspiciatis quidem
+          culpa provident et magnam in non nemo excepturi ex dolore! Delectus
+          mollitia similique sint non! Cum enim rerum quae veritatis, architecto
+          deleniti neque provident velit.
+        </p>
+        <figure>
+          <img src="img/fondo.png" alt="imaxe" />
+        </figure>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
+          corrupti, itaque temporibus, qui, ducimus dolorem veritatis iste
+          inventore mollitia nesciunt cumque dignissimos quasi sunt consequuntur
+          dolor repellendus cupiditate exercitationem? Exercitationem, rerum in
+          reiciendis voluptate qui voluptatibus consequatur facere aut a.
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
